editors/tree-sitter/test/corpus/proofs.txt
================================================================================
Rule with separator
================================================================================

rule transitivity(
  T : Sort,
  x y z : T
)
  |- x = y;

  |- y = z

  ------------------------

  |- x = z
end;

--------------------------------------------------------------------------------

(source_file
  (rule_decl
    name: (identifier)
    params: (formal_params
      (formal_param
        (term_binding names: (ident_list (identifier)) type: (type_expr (identifier))))
      (formal_param
        (term_binding
          names: (ident_list (identifier) (identifier) (identifier))
          type: (type_expr (identifier)))))
    (rule_body
      premises: (premise_list
        (sequent (turnstile)
          goal: (prop (equality_prop left: (term (identifier)) right: (term (identifier)))))
        (sequent (turnstile)
          goal: (prop (equality_prop left: (term (identifier)) right: (term (identifier))))))
      (separator)
      conclusion: (sequent (turnstile)
        goal: (prop (equality_prop left: (term (identifier)) right: (term (identifier))))))))

================================================================================
Lemma with proof and cases
================================================================================

lemma add_zero_right(
  n : Nat
)
  |- n + 0 = n;
proof
  by reflexivity(Nat, n);
qed;

--------------------------------------------------------------------------------

(source_file
  (lemma_decl
    name: (identifier)
    params: (formal_params
      (formal_param
        (term_binding names: (ident_list (identifier)) type: (type_expr (identifier)))))
    statement: (sequent (turnstile)
      goal: (prop (equality_prop
        left: (term (identifier) (infix_op) (numeric_symbol))
        right: (term (identifier)))))
    proof: (proof_block
      (by_stmt_zero
        ref: (proof_ref
          name: (identifier)
          args: (actual_args
            (term_list (term (identifier)) (term (identifier)))))))))

================================================================================
Quantified prop with logical operators
================================================================================

axiom demo(
  P Q : Prop
)
  |- ~P /\ Q \/ P => Q <=> P;

--------------------------------------------------------------------------------

(source_file
  (axiom_decl
    name: (identifier)
    params: (formal_params
      (formal_param
        (term_binding names: (ident_list (identifier) (identifier)) type: (type_expr (prop_type)))))
    statement: (sequent (turnstile)
      goal: (prop
        (negation (negation_op) (identifier))
        (conjunction_op)
        (identifier)
        (disjunction_op)
        (identifier)
        (implication_op)
        (identifier)
        (biconditional_op)
        (identifier)))))
